--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -5,7 +5,7 @@
   width: 100%;
   position: relative;
   padding: {
-    top: 93 / $unit * $symbol;
+    top: (93 + 36) / $unit * $symbol;
     bottom: 99 / $unit * $symbol;
   }
   background-color: #f4f4f4;
